--- a/Angular/package.json
+++ b/Angular/package.json
@@ -18,11 +18,11 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@types/dom-to-image": "^2.6.4",
     "angular2-draggable": "^2.3.2",
+    "dom-to-image-more": "^3.1.4",
     "html-to-image": "^1.11.11",
     "html2canvas": "^1.4.1",
-    "konva": "^9.0.0",
-    "ng2-konva": "^6.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
